--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-input-mask": "^2.0.4",
+    "react-text-mask": "^5.5.0",
+    "text-mask-addons": "^3.8.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
